@@ -1,3 +1,8 @@
+2004-04-23  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses): return
+	NULL and the last error if we failed to resolve any of the addresses.
+
 2004-04-19  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-release bump to 2.6.2
